puzzle functionality (render puzlle image and some eventListners), Katherine

--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
-    <title>Instructions</title>
+    <title>Puzzle</title>
 </head>
 
 <body>
@@ -22,12 +22,17 @@
 
     </header>
     <main>
+        <section id="puzzle-title">
+
+        </section>
         <section id="timer">
             <!-- timer, score -->
         </section>
+
         <section id="puzzle">
             <!-- rendered in js -->
         </section>
+
         <section id="item-list">
             <!-- rendered in js -->
         </section>
