finish basic game logic

--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -26,6 +26,7 @@
 
         </section>
         <section id="timer">
+            <div><span id="time">05:00</span></div>
             <!-- timer, score -->
         </section>
 
@@ -34,6 +35,7 @@
         </section>
 
         <section id="item-list">
+            I Spy
             <!-- rendered in js -->
         </section>
     </main>
