--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -27,6 +27,8 @@
         </section>
         <section id="timer">
             <div><span id="time">05:00</span></div>
+            <div>Score:<span id="score"></span></div>
+            <div><span id="WRONG"></span></div>
             <!-- timer, score -->
         </section>
 
