started on results table render, Katherine

--- a/results/index.html
+++ b/results/index.html
@@ -21,8 +21,8 @@
         <button>Logout</button>
     </header>
     <main>
-        <section id="found-table">
-            <table>
+        <section>
+            <table id="found-table">
                 Final Results
                 <thead>
                     <th>Found Objects</th>
@@ -32,8 +32,8 @@
             </table>
         </section>
 
-        <section id="scoreboard">
-            <table>
+        <section>
+            <table id="scoreboard">
                 <thead>
                     <th>Username</th>
                     <th>Score</th>
