fix eslint errors

--- a/game-config/index.html
+++ b/game-config/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <title>Instructions</title>
 </head>
 
@@ -37,6 +37,44 @@
             for the score each round.
 
         </p>
+        
+        <form>
+            <label>
+                
+            </label>
+            <div>
+                <h3>Time</h3>
+            <label>
+                1 Minute
+                <input type="radio" name="time" value="1" required>
+            </label>
+            <label>
+                3 Minutes
+                <input type="radio" name="time" value="3" required>
+            </label>
+            <label>
+                5 Minutes
+                <input type="radio" name="time" value="5" required>
+            </label>
+            <label>
+                10 minutes
+                <input type="radio" name="time" value="10" required>
+            </label>
+        </div>
+            <div>
+                <h3>difficulty</h3>
+                <label>
+                    Baby mode
+                    <input type="radio" name="difficulty" value="baby" required>
+                </label>
+                <label>
+                    Normal
+                    <input type="radio" name="difficulty" value="normal" required>
+                </label>
+
+            </div>
+            <button>Select Settings</button>
+        </form> 
 
 
         <section class="config">
