--- a/results/index.html
+++ b/results/index.html
@@ -32,6 +32,8 @@
             <table id="scoreboard">
                 <thead>
                     <th>Username</th>
+                    <th>Map</th>
+                    <th>Difficulty</th>
                     <th>Score</th>
                 </thead>
                 <!-- render scoreboard dynamically based on users -->
