add basic CSS header style structure

--- a/game-config/index.html
+++ b/game-config/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@500;700&display=swap" rel="stylesheet">
     <title>Instructions</title>
 </head>
 
@@ -37,30 +39,30 @@
             for the score each round.
 
         </p>
-        
+
         <form>
             <label>
-                
+
             </label>
             <div>
                 <h3>Time</h3>
-            <label>
-                1 Minute
-                <input type="radio" name="time" value="1" required>
-            </label>
-            <label>
-                3 Minutes
-                <input type="radio" name="time" value="3" required>
-            </label>
-            <label>
-                5 Minutes
-                <input type="radio" name="time" value="5" required>
-            </label>
-            <label>
-                10 minutes
-                <input type="radio" name="time" value="10" required>
-            </label>
-        </div>
+                <label>
+                    1 Minute
+                    <input type="radio" name="time" value="1" required>
+                </label>
+                <label>
+                    3 Minutes
+                    <input type="radio" name="time" value="3" required>
+                </label>
+                <label>
+                    5 Minutes
+                    <input type="radio" name="time" value="5" required>
+                </label>
+                <label>
+                    10 minutes
+                    <input type="radio" name="time" value="10" required>
+                </label>
+            </div>
             <div>
                 <h3>difficulty</h3>
                 <label>
@@ -74,7 +76,7 @@
 
             </div>
             <button>Select Settings</button>
-        </form> 
+        </form>
 
 
         <section class="config">
