make puzzle render dynamic and target most recent and target most recent score

--- a/results/index.html
+++ b/results/index.html
@@ -29,8 +29,8 @@
         </section>
 
         <section>
-            <table id="scoreboard">
-                <thead>
+            <table class="scoreboard"id="scoreboard">
+                <thead >
                     <th>Username</th>
                     <th>Map</th>
                     <th>Difficulty</th>
@@ -40,7 +40,7 @@
             </table>
         </section>
 
-        <button>Play Again</button>
+        <button id="play-again">Play Again</button>
 
     </main>
     <footer>
