pre-select config values

--- a/game-config/index.html
+++ b/game-config/index.html
@@ -56,7 +56,7 @@
                 </label>
                 <label>
                     5 Minutes
-                    <input type="radio" name="time" value="5" required>
+                    <input type="radio" name="time" value="5" required checked>
                 </label>
                 <label>
                     10 minutes
@@ -71,7 +71,7 @@
                 </label>
                 <label>
                     Normal
-                    <input type="radio" name="difficulty" value="normal" required>
+                    <input type="radio" name="difficulty" value="normal" required checked>
                 </label>
 
             </div>
@@ -79,10 +79,7 @@
         </form>
 
 
-        <section class="config">
-
-            <button id='play'>Play Puzzle</button>
-        </section>
+      
 
     </main>
     <footer>
