add alignment of book to puzzle page

--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -19,24 +19,23 @@
 
     </header>
     <main>
-        <section id="puzzle-title">
+        <div id="puzzle-container">
+            <section id="timer">
+                <div><span id="time">05:00</span></div>
+                <div>Score:<span id="score"></span></div>
+                <div><span id="WRONG"></span></div>
+                <!-- timer, score -->
+            </section>
 
-        </section>
-        <section id="timer">
-            <div><span id="time">05:00</span></div>
-            <div>Score:<span id="score"></span></div>
-            <div><span id="WRONG"></span></div>
-            <!-- timer, score -->
-        </section>
+            <section id="puzzle">
+                <!-- rendered in js -->
+            </section>
 
-        <section id="puzzle">
-            <!-- rendered in js -->
-        </section>
-
-        <section id="item-list">
-            I Spy
-            <!-- rendered in js -->
-        </section>
+            <section id="item-list">
+                I Spy
+                <!-- rendered in js -->
+            </section>
+        </div>
     </main>
     <footer>
 
