--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -23,7 +23,7 @@
 
         </section>
         <section id="timer">
-            <div><span id="time">05:00</span></div>
+            <div><span id="time"></span></div>
             <div>Score:<span id="score"></span></div>
             <div><span id="WRONG"></span></div>
             <!-- timer, score -->
