--- a/credits/index.html
+++ b/credits/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/credits.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@500;700&display=swap" rel="stylesheet">
     <title>Instructions</title>
@@ -19,6 +20,13 @@
 
     </header>
     <main>
+        <section class="credits-background">
+
+            <img class="kat-photo" src="../assets/kat.png">
+            <img class="d-photo" src="../assets/daniella.png">
+            <img class="kalan-photo" src="../assets/kalan.png">
+
+        </section>
         <section class="developer" id="d1">
             <img>
             <p>
