accidentally working here, fixed credits css

--- a/credits/index.html
+++ b/credits/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/reset.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <!-- <link rel="stylesheet" href="../styles/style.css"> -->
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/credits.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,67 +27,22 @@
             <img class="kalan-photo" src="../assets/kalan.png">
 
         </section>
-        <section class="developer" id="d1">
-            <img>
+        
+        <section class="ispy-rhymes">
             <p>
-                Name
-            </p>
-            <p>
-                Description
-            </p>
-            <div>
-                Media
-            </div>
-        </section>
+                I spy a boy on too big a chair,
+                a girl with two tails for hair,
+                a fighter with the eye of a tiger,
+                and a kid in a crew of cart riders.
 
-        <section class="developer" id="d2">
-            <img>
-            <p>
-                Name
             </p>
-            <p>
-                Description
-            </p>
-            <div>
-                Media
-            </div>
-        </section>
-
-        <section class="developer" id="d3">
-            <img>
-            <p>
-                Name
-            </p>
-            <p>
-                Description
-            </p>
-            <div>
-                Media
-            </div>
-        </section>
-
-        <section class="developer" id="d4">
-            <img>
-            <p>
-                Name
-            </p>
-            <p>
-                Description
-            </p>
-            <div>
-                Media
-            </div>
-        </section>
-
-        <section>
-            I spy four developers;
         </section>
     </main>
     <footer>
 
     </footer>
 
-    <script type="module" src="./credits.js"></script>
+    <!-- <script type="module" src="./credits.js"></script> -->
 </body>
 
 </html>
