--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -19,12 +19,17 @@
 
     </header>
     <main>
-
         <div id="puzzle-container">
             <section id="timer">
-                <div><span id="time"></span></div>
-                <div>Score:<span id="score"></span></div>
-                <div><span id="WRONG"></span></div>
+                <span id="time">
+
+                </span>
+                <div class="score-container">
+                    Score:
+                    <span id="score">
+
+                    </span>
+                </div>
                 <!-- timer, score -->
             </section>
 
