--- a/credits/index.html
+++ b/credits/index.html
@@ -25,6 +25,7 @@
             <img class="kat-photo" src="../assets/kat.png">
             <img class="d-photo" src="../assets/daniella.png">
             <img class="kalan-photo" src="../assets/kalan.png">
+            <img class="gabriel-photo" src="../assets/gabriel.png">
 
         </section>
         
