--- a/results/index.html
+++ b/results/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <title>Instructions</title>
 </head>
 
@@ -31,8 +33,8 @@
         </section>
 
         <section>
-            <table class="scoreboard"id="scoreboard">
-                <thead >
+            <table class="scoreboard" id="scoreboard">
+                <thead>
                     <th>Username</th>
                     <th>Map</th>
                     <th>Difficulty</th>
