add CSS for instructions page

--- a/game-config/index.html
+++ b/game-config/index.html
@@ -20,69 +20,73 @@
     <header>
 
     </header>
-    <main>
-        <h2>Table of Contents</h2>
-        <ul>
+    <main class="main-instructions">
+        <div class="left-instructions">
+            <h2>Instructions</h2>
+            <h3>
+                Take a look<br>
+                At this book.<br>
+                For how to play,<br>
+                Look this way.<br>
+                Find the objects<br>
+                If you dare.<br>
+                Watch the timer;<br>
+                Play with care.<br>
+                Points you'll get<br>
+                For objects found.<br>
+                Check out the result page,<br>
+                For the score each round.
+            </h3>
+        </div>
 
-        </ul>
-        <p>
-            Instructions
-            Take a look
-            at this book
-            for how to play
-            look this way
-            Find the objects
-            if you dare
-            Watch the timer
-            Play with care
-            Points you'll get
-            for objects found
-            Check out the result page,
-            for the score each round.
+        <div class="right-instructions">
+            <div class="table-of-contents">
+                <h2>Table of Contents</h2>
+                <ul>
 
-        </p>
-
-        <form>
-            <label>
-
-            </label>
-            <div>
-                <h3>Time</h3>
-                <label>
-                    1 Minute
-                    <input type="radio" name="time" value="1" required>
-                </label>
-                <label>
-                    3 Minutes
-                    <input type="radio" name="time" value="3" required>
-                </label>
-                <label>
-                    5 Minutes
-                    <input type="radio" name="time" value="5" required checked>
-                </label>
-                <label>
-                    10 minutes
-                    <input type="radio" name="time" value="10" required>
-                </label>
+                </ul>
             </div>
-            <div>
-                <h3>difficulty</h3>
-                <label>
-                    Baby mode
-                    <input type="radio" name="difficulty" value="baby" required>
-                </label>
-                <label>
-                    Normal
-                    <input type="radio" name="difficulty" value="normal" required checked>
-                </label>
+            <div class="game-settings">
+                <h2>Game Settings</h2>
+                <form>
+                    <label>
 
+                    </label>
+                    <div>
+                        <h3>Time</h3>
+                        <label>
+                            1 Minute
+                            <input type="radio" name="time" value="1" required>
+                        </label>
+                        <label>
+                            3 Minutes
+                            <input type="radio" name="time" value="3" required>
+                        </label>
+                        <label>
+                            5 Minutes
+                            <input type="radio" name="time" value="5" required checked>
+                        </label>
+                        <label>
+                            10 minutes
+                            <input type="radio" name="time" value="10" required>
+                        </label>
+                    </div>
+                    <div>
+                        <h3>Difficulty</h3>
+                        <label>
+                            Baby mode
+                            <input type="radio" name="difficulty" value="baby" required>
+                        </label>
+                        <label>
+                            Normal
+                            <input type="radio" name="difficulty" value="normal" required checked>
+                        </label>
+
+                    </div>
+                    <button>Confirm Settings</button>
+                </form>
             </div>
-            <button>Select Settings</button>
-        </form>
-
-
-
-
+        </div>
     </main>
     <footer>
 
