--- a/credits/index.html
+++ b/credits/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/reset.css">
     <!-- <link rel="stylesheet" href="../styles/style.css"> -->
-    <link rel="stylesheet" href="../styles/home.css">
+    <!-- <link rel="stylesheet" href="../styles/home.css"> -->
     <link rel="stylesheet" href="../styles/credits.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@500;700&display=swap" rel="stylesheet">
@@ -20,30 +20,45 @@
 
     </header>
     <main>
-        <section class="credits-background">
+        <div class="left descriptions">
+            <p id="kat-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
+            <p id="kalan-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
+        </div>
+        <div class="bulletin">
+            <section class="credits-background">
 
-            <img class="kat-photo" src="../assets/kat.png">
-            <img class="d-photo" src="../assets/daniella.png">
-            <img class="kalan-photo" src="../assets/kalan.png">
-            <img class="gabriel-photo" src="../assets/gabriel.png">
+                <img class="kat-photo" src="../assets/kat.png">
+                <img class="d-photo" src="../assets/daniella.png">
+                <img class="kalan-photo" src="../assets/kalan.png">
+                <img class="gabriel-photo" src="../assets/gabriel.png">
 
-        </section>
-        
-        <section class="ispy-rhymes">
-            <p>
+            </section>
+            <section class="ispy-rhymes">
+            <span id="kal-clue">
                 I spy a boy on too big a chair,
+            </span>
+            <span id="kat-clue">
                 a girl with two tails for hair,
+            </span>
+            <span id="dan-clue">
                 a fighter with the eye of a tiger,
+            </span>
+            <span id="gab-clue">
                 and a kid in a crew of cart riders.
-
-            </p>
+            </span>
+            </section>
+        </div>
         </section>
+        <div class="right descriptions">
+            <p id="gabriel-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
+            <p id="daniella-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
+        </div>
     </main>
     <footer>
 
     </footer>
 
-    <!-- <script type="module" src="./credits.js"></script> -->
+    <script type="module" src="./credits.js"></script>
 </body>
 
 </html>
