add CSS main style for results

--- a/results/index.html
+++ b/results/index.html
@@ -20,10 +20,10 @@
     <header>
 
     </header>
-    <main>
-        <section>
+    <main class="main-results">
+        <section class="left-results">
             <table id="found-table">
-                Final Results
+                <h3 class="table-title">Final Results</h3>
                 <thead>
                     <th>Found Objects</th>
                     <th>Description</th>
@@ -32,9 +32,10 @@
             </table>
         </section>
 
-        <section>
+        <section class="right-results">
             <table class="scoreboard" id="scoreboard">
                 <thead>
+                    <h3 class="table-title">Scoreboard</h3>
                     <th>Username</th>
                     <th>Map</th>
                     <th>Difficulty</th>
@@ -42,9 +43,10 @@
                 </thead>
                 <!-- render scoreboard dynamically based on users -->
             </table>
+            <button id="play-again" class="play-again-button">Play Again</button>
         </section>
 
-        <button id="play-again">Play Again</button>
+
 
     </main>
     <footer>
