added audio skeleton, removed beads

--- a/game-config/index.html
+++ b/game-config/index.html
@@ -77,7 +77,7 @@
             </div>
             <button>Select Settings</button>
         </form>
-
+            <button id="audio">Care for some Music?</button>
 
       
 
