--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -43,6 +43,7 @@
                 I Spy
                 <!-- rendered in js -->
             </section>
+            <div id="results-button"></div>
         </div>
 
     </main>
