--- a/music/index.html
+++ b/music/index.html
@@ -11,7 +11,7 @@
 </head>
 <main>
 <body>
-    <--
+    <!--Sourced from https://github.com/bradtraversy/vanillawebprojects/tree/master/music-player-->
     <h1>Music Player</h1>
 
   <div class="music-container" id="music-container">
