credit blurbs and fixing images in cubbies

--- a/credits/index.html
+++ b/credits/index.html
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
     <title>Instructions</title>
 </head>
 
@@ -23,38 +25,49 @@
     </header>
     <main>
         <div class="left descriptions">
-            <p id="kat-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
-            <p id="kalan-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
+            <p id="kat-description" class="hidden"> Back in the days, Katherine used to run around petting all the doggos, singing out loud, and eating all the delicious foods she could stuff in her face.  <br/><br/>
+                <a href="https://github.com/katherinetam" id="profile-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/katherinetam/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
+            </p>
+            <p id="kalan-description" class="hidden"> In the before times, Kalan would play piano, do drawings, and play mario kart. <br/><br/>
+                <a href="https://github.com/prudhomk" id="profile-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/kalanprudhomme/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
+            </p>
         </div>
         <div class="bulletin">
             <section class="credits-background">
-
                 <img class="kat-photo" src="../assets/kat.png">
                 <img class="d-photo" src="../assets/daniella.png">
                 <img class="kalan-photo" src="../assets/kalan.png">
                 <img class="gabriel-photo" src="../assets/gabriel.png">
+            </section>
 
-            </section>
             <section class="ispy-rhymes">
-            <span id="kal-clue">
-                I spy a boy on too big a chair,
-            </span>
-            <span id="kat-clue">
-                a girl with two tails for hair,
-            </span>
-            <span id="dan-clue">
-                a fighter with the eye of a tiger,
-            </span>
-            <span id="gab-clue">
-                and a kid in a crew of cart riders.
-            </span>
+                <span id="kal-clue">
+                    I spy a boy on too big a chair,
+                </span>
+                <span id="kat-clue">
+                    a girl with two tails for hair,
+                </span>
+                <span id="dan-clue">
+                    a fighter with the eye of a tiger,
+                </span>
+                <span id="gab-clue">
+                    and a kid in a crew of cart riders.
+                </span>
             </section>
         </div>
-        </section>
-        <div class="right descriptions">
-            <p id="gabriel-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
-            <p id="daniella-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
-        </div>
+            <div class="right descriptions">
+                <p id="gabriel-description" class="hidden"> A long time ago, Gabriel liked skiing too fast, playing cello, and cuddling kitties. <br/><br/>
+                    <a href="https://github.com/gabrielsimek" id="profile-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/gabrielsimek/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
+                </p>
+                
+                <p id="daniella-description" class="hidden"> When she was young, Daniella liked to climb trees, play with pogs, and dig for dinosaurs with her siblings. <br/><br/>
+                    <a href="https://github.com/daniellamarks" id="profile-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/daniella-marks/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
+                </p>
+            </div>
     </main>
   
 
