fixing images and i spy words

--- a/credits/index.html
+++ b/credits/index.html
@@ -43,8 +43,9 @@
             </section>
 
             <section class="ispy-rhymes">
+                <span>I spy </span>
                 <span id="kal-clue">
-                    I spy a boy on too big a chair,
+                    a boy on too big a chair,
                 </span>
                 <span id="kat-clue">
                     a girl with two tails for hair,
@@ -63,7 +64,7 @@
                     <a href="https://www.linkedin.com/in/gabrielsimek/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
                 </p>
                 
-                <p id="daniella-description" class="hidden"> When she was young, Daniella liked to climb trees, play with pogs, and dig for dinosaurs with her siblings. <br/><br/>
+                <p id="daniella-description" class="hidden"> When she was young, Daniella liked to climb trees, play with pogs, and dig for dinosaurs in her grandparent's backyard. <br/><br/>
                     <a href="https://github.com/daniellamarks" id="profile-link"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/daniella-marks/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
                 </p>
