--- a/credits/index.html
+++ b/credits/index.html
@@ -7,13 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/reset.css">
-    <!-- <link rel="stylesheet" href="../styles/style.css"> -->
-    <!-- <link rel="stylesheet" href="../styles/home.css"> -->
+    <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/credits.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
     <title>Instructions</title>
 </head>
 
@@ -23,8 +18,10 @@
     </header>
     <main>
         <div class="left descriptions">
-            <p id="kat-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
-            <p id="kalan-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas. </p>
+            <p id="kat-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum
+                aliquid ducimus voluptas. </p>
+            <p id="kalan-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum
+                aliquid ducimus voluptas. </p>
         </div>
         <div class="bulletin">
             <section class="credits-background">
@@ -36,27 +33,29 @@
 
             </section>
             <section class="ispy-rhymes">
-            <span id="kal-clue">
-                I spy a boy on too big a chair,
-            </span>
-            <span id="kat-clue">
-                a girl with two tails for hair,
-            </span>
-            <span id="dan-clue">
-                a fighter with the eye of a tiger,
-            </span>
-            <span id="gab-clue">
-                and a kid in a crew of cart riders.
-            </span>
+                <span id="kal-clue">
+                    I spy a boy on too big a chair,
+                </span>
+                <span id="kat-clue">
+                    a girl with two tails for hair,
+                </span>
+                <span id="dan-clue">
+                    a fighter with the eye of a tiger,
+                </span>
+                <span id="gab-clue">
+                    and a kid in a crew of cart riders.
+                </span>
             </section>
         </div>
         </section>
         <div class="right descriptions">
-            <p id="gabriel-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
-            <p id="daniella-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eum aliquid ducimus voluptas.</p>
+            <p id="gabriel-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                eum aliquid ducimus voluptas.</p>
+            <p id="daniella-description" class="hidden"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                eum aliquid ducimus voluptas.</p>
         </div>
     </main>
-  
+
 
     <script type="module" src="./credits.js"></script>
 </body>
