--- a/music/index.html
+++ b/music/index.html
@@ -13,7 +13,7 @@
 <body>
     <!--Sourced from https://github.com/bradtraversy/vanillawebprojects/tree/master/music-player-->
     <h1>Music Player</h1>
-
+    <h2>Click the arrows to change songs.</h2>
   <div class="music-container" id="music-container">
     <div class="music-info">
       <h4 id="title"></h4>
