--- a/results/index.html
+++ b/results/index.html
@@ -35,6 +35,7 @@
                     <th>Username</th>
                     <th>Map</th>
                     <th>Difficulty</th>
+                    <th>Time</th>
                     <th>Score</th>
                 </thead>
                 <!-- render scoreboard dynamically based on users -->
