--- a/credits/index.html
+++ b/credits/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/credits.css">
-    <title>Instructions</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    
+    <title>Credits</title>
 </head>
 
 <body>
@@ -68,3 +70,4 @@
 </body>
 
 </html>
+
