--- a/results/index.html
+++ b/results/index.html
@@ -18,14 +18,16 @@
     </header>
     <main class="main-results">
         <section class="left-results">
-            <table id="found-table">
-                <h3 class="table-title">Final Results</h3>
-                <thead>
-                    <th>Found Objects</th>
-                    <th>Description</th>
-                </thead>
-                <!-- render found items dynamically -->
+            <h3 class="table-title">Final Results</h3>
+            <div class="results-wrap">
+                <table id="found-table">
+                    <thead>
+                        <th>Found Objects</th>
+                        <th>Description</th>
+                    </thead>
+                    <!-- render found items dynamically -->
             </table>
+            </div>
         </section>
 
         <section class="right-results">
