fixing kat's linked in and github

--- a/credits/index.html
+++ b/credits/index.html
@@ -21,8 +21,8 @@
     <main>
         <div class="left descriptions">
             <p id="kat-description" class="hidden"> Back in the days, Katherine used to run around petting all the doggos, singing out loud, and eating all the delicious foods she could stuff in her face.  <br/><br/>
-                <a href="https://github.com/katherinetam" id="profile-link"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/katherinetam/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/katherinemtam" id="profile-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/katherinemtam/" id="profile-link"><i class="fab fa-linkedin-in"></i></a>
             </p>
             <p id="kalan-description" class="hidden"> In the before times, Kalan would play piano, do drawings, and play mario kart. <br/><br/>
                 <a href="https://github.com/prudhomk" id="profile-link"><i class="fab fa-github"></i></a>
